# kaggle-s4-e1

./: .gitignore  README.md  tfDNN.ipynb  tfLinearRegression.ipynb
bank_churn/: pyvenv.cfg  requirements.txt
models/: pyproject.toml
