[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Cody Kilpatrick <Codykilpatrick1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.3"
pandas = "^2.1.4"
seaborn = "^0.13.1"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
